      prevent the display of extended debugging information has been
      added.
    * Unmodified shadows will be recognized as already present when
      promoting them to their parent branch.  Previously they would be 
      re-promoted unnecessarily. (CNY-2837)
    * conary update --test no longer executes the tagscripts associated 
      with the update. (CNY-2800)

  o Build Changes:
    * Info recipe actions (r.User, r.Group, and r.SupplementalGroup) are
      now available in package recipes. (CNY-2723)
    * Python packages now use %(libdir)s instead of %(prefix)s/lib for pure
      Python libraries.  This is an artifact left behind from fixing CNY-2110
      and CNP-121.
    * A bug causing log output to be lost if conary's log module was
      imported in a recipe has been fixed. (CNY-2813)

Changes in 2.0.15:
  o Code Changes:
    * We've started using a @publicApi decorator to tag methods which
      are part of the public conary API. (CNY-2367)
    * xmldata.py is no longer part of the Conary library. (CNY-2765)

  o Bug Fixes:
    * An incompatibility of the db2db migration script with the latest
      repository schema has been corrected. (CNY-2774)
    * An error in the handling of multiple URLs with addArchive has
      been fixed. (CNY-2778)
    * sys.argv is not defined under mod_python; importing cvc.py should
      no longer fail as a result of using sys.argv as a default argument
      to main(). (CNY-2786)
    * repository code handles correctly the removal of groups that
      include troves from other repositories. (CNY-2802)
    * When using sqlite, some temporary tables used the invalid column
      datatype of STRING instead of TEXT. This has been fixed. (CNY-2013)
    * Fixed bug that made the repository code return incomplete data
      for the getPackageBranchPathIds call in certain situations. (CNY-2810)

  o Build Changes:
    * Removed defaultBasePackages configuration option as well as the